Fix align problem

--- a/source/css/_common/components/post/post-collapse.styl
+++ b/source/css/_common/components/post/post-collapse.styl
@@ -33,7 +33,8 @@
 
   .collection-title {
     position: relative;
-    margin: 60px 0;
+    margin-top: 50px;
+    margin-bottom: 10px;
 
     h1, h2 { margin-left: 20px; }
 
@@ -53,7 +54,7 @@
     }
   }
 
-  .post { margin: 30px 0; }
+  .post { margin: 10px 0; }
 
   .post-header {
     position: relative;
