--- a/source/css/_common/components/post/post-expand.styl
+++ b/source/css/_common/components/post/post-expand.styl
@@ -63,6 +63,8 @@
   h1 {
     border-left: 5px solid #555;
     padding-left: 20px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     margin-left: -40px;
     margin-right: -40px;
     background-color: #fbfbfb;
