--- a/source/css/_common/scaffolding/base.styl
+++ b/source/css/_common/scaffolding/base.styl
@@ -19,13 +19,13 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
-  padding: 5px 0;
+  padding: 0px 0;
   font-weight: bold;
   line-height: 1.5;
   font-family: $font-family-headings;
 }
 
-h2, h3, h4, h5, h6 { margin: 20px 0 15px; }
+h2, h3, h4, h5, h6 { margin: 0px 0 0px; }
 
 for headline in (1..6) {
   h{headline} {
